added restcontroller, spring boot web, get mapping, and queryparameters